library/src/libqprocess.h

typedef struct QProcessEnvironment QProcessEnvironment;
QTLIBC_API QProcessEnvironment* QProcessEnvironment_new();
QTLIBC_API QProcessEnvironment* QProcessEnvironment_new2(int param1);
QTLIBC_API QProcessEnvironment* QProcessEnvironment_new3(QProcessEnvironment* other);
QTLIBC_API void QProcessEnvironment_OperatorAssign(QProcessEnvironment* self, QProcessEnvironment* other);
QTLIBC_API void QProcessEnvironment_Swap(QProcessEnvironment* self, QProcessEnvironment* other);
QTLIBC_API bool QProcessEnvironment_OperatorEqual(const QProcessEnvironment* self, QProcessEnvironment* other);
QTLIBC_API bool QProcessEnvironment_OperatorNotEqual(const QProcessEnvironment* self, QProcessEnvironment* other);
QTLIBC_API bool QProcessEnvironment_IsEmpty(const QProcessEnvironment* self);
QTLIBC_API bool QProcessEnvironment_InheritsFromParent(const QProcessEnvironment* self);
QTLIBC_API void QProcessEnvironment_Clear(QProcessEnvironment* self);
QTLIBC_API bool QProcessEnvironment_Contains(const QProcessEnvironment* self, libqt_string name);
QTLIBC_API void QProcessEnvironment_Insert(QProcessEnvironment* self, libqt_string name, libqt_string value);
QTLIBC_API void QProcessEnvironment_Remove(QProcessEnvironment* self, libqt_string name);
QTLIBC_API libqt_string QProcessEnvironment_Value(const QProcessEnvironment* self, libqt_string name);
QTLIBC_API libqt_list /* of libqt_string */ QProcessEnvironment_ToStringList(const QProcessEnvironment* self);
QTLIBC_API libqt_list /* of libqt_string */ QProcessEnvironment_Keys(const QProcessEnvironment* self);
QTLIBC_API void QProcessEnvironment_InsertWithQProcessEnvironment(QProcessEnvironment* self, QProcessEnvironment* e);
QTLIBC_API QProcessEnvironment* QProcessEnvironment_SystemEnvironment();
QTLIBC_API libqt_string QProcessEnvironment_Value2(const QProcessEnvironment* self, libqt_string name, libqt_string defaultValue);