src/qt/libqprocess.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QProcessEnvironment__Initialization
{
	InheritFromParent = 0,
}
[AllowDuplicates]
public enum QProcess__ProcessError
{
	FailedToStart = 0,
	Crashed = 1,
	Timedout = 2,
	ReadError = 3,
	WriteError = 4,
	UnknownError = 5,
}
[AllowDuplicates]
public enum QProcess__ProcessState
{
	NotRunning = 0,
	Starting = 1,
	Running = 2,
}
[AllowDuplicates]
public enum QProcess__ProcessChannel
{
	StandardOutput = 0,
	StandardError = 1,
}
[AllowDuplicates]
public enum QProcess__ProcessChannelMode
{
	SeparateChannels = 0,
	MergedChannels = 1,
	ForwardedChannels = 2,
	ForwardedOutputChannel = 3,
	ForwardedErrorChannel = 4,
}
[AllowDuplicates]
public enum QProcess__InputChannelMode
{
	ManagedInputChannel = 0,
	ForwardedInputChannel = 1,
}
[AllowDuplicates]
public enum QProcess__ExitStatus
{
	NormalExit = 0,
	CrashExit = 1,
}
public struct QProcessEnvironment
{
	[LinkName("QProcessEnvironment_new")]
	public static extern QProcessEnvironment* QProcessEnvironment_new();
	[LinkName("QProcessEnvironment_new2")]
	public static extern QProcessEnvironment* QProcessEnvironment_new2(int64 param1);
	[LinkName("QProcessEnvironment_new3")]
	public static extern QProcessEnvironment* QProcessEnvironment_new3(QProcessEnvironment* other);
	[LinkName("QProcessEnvironment_OperatorAssign")]
	public static extern void QProcessEnvironment_OperatorAssign(Self* c_this, QProcessEnvironment* other);
	[LinkName("QProcessEnvironment_Swap")]
	public static extern void QProcessEnvironment_Swap(Self* c_this, QProcessEnvironment* other);
	[LinkName("QProcessEnvironment_OperatorEqual")]
	public static extern bool QProcessEnvironment_OperatorEqual(Self* c_this, QProcessEnvironment* other);
	[LinkName("QProcessEnvironment_OperatorNotEqual")]
	public static extern bool QProcessEnvironment_OperatorNotEqual(Self* c_this, QProcessEnvironment* other);
	[LinkName("QProcessEnvironment_IsEmpty")]
	public static extern bool QProcessEnvironment_IsEmpty(Self* c_this);
	[LinkName("QProcessEnvironment_InheritsFromParent")]
	public static extern bool QProcessEnvironment_InheritsFromParent(Self* c_this);
	[LinkName("QProcessEnvironment_Clear")]
	public static extern void QProcessEnvironment_Clear(Self* c_this);
	[LinkName("QProcessEnvironment_Contains")]
	public static extern bool QProcessEnvironment_Contains(Self* c_this, libqt_string name);
	[LinkName("QProcessEnvironment_Insert")]
	public static extern void QProcessEnvironment_Insert(Self* c_this, libqt_string name, libqt_string value);
	[LinkName("QProcessEnvironment_Remove")]
	public static extern void QProcessEnvironment_Remove(Self* c_this, libqt_string name);
	[LinkName("QProcessEnvironment_Value")]
	public static extern libqt_string QProcessEnvironment_Value(Self* c_this, libqt_string name);
	[LinkName("QProcessEnvironment_ToStringList")]
	public static extern libqt_string[] QProcessEnvironment_ToStringList(Self* c_this);
	[LinkName("QProcessEnvironment_Keys")]
	public static extern libqt_string[] QProcessEnvironment_Keys(Self* c_this);
	[LinkName("QProcessEnvironment_InsertWithQProcessEnvironment")]
	public static extern void QProcessEnvironment_InsertWithQProcessEnvironment(Self* c_this, QProcessEnvironment* e);
	[LinkName("QProcessEnvironment_SystemEnvironment")]
	public static extern QProcessEnvironment QProcessEnvironment_SystemEnvironment();
	[LinkName("QProcessEnvironment_Value2")]
	public static extern libqt_string QProcessEnvironment_Value2(Self* c_this, libqt_string name, libqt_string defaultValue);
}
